# mtg_draft_tracekr

./: README_api.MD  pyproject.toml
draft-tracker-system/: .gitignore  README.md  main.py  pyproject.toml
draft-tracker-system/conf/base/: catalog.yml  parameters.yml
draft-tracker-system/conf/local/: credentials.yml  credentials_copy.yml
draft-tracker-system/data/01_raw/: card_ratings.csv  card_stats.csv  cards_info.parquet  draft_popularity.db  winning_drafts.parquet
draft-tracker-system/data/02_intermediate/: database.db
draft-tracker-system/src/draft_tracker_system/: __init__.py  __main__.py  pipeline_registry.py  settings.py
draft-tracker-system/src/draft_tracker_system/db/: models.py  repository.py  session.py
draft-tracker-system/src/draft_tracker_system/pipelines/card_info_api/: nodes.py  pipeline.py
draft-tracker-system/src/draft_tracker_system/pipelines/consolidate_data/: nodes.py  pipeline.py
draft-tracker-system/src/draft_tracker_system/pipelines/data_big/: nodes.py  pipeline.py
draft-tracker-system/src/draft_tracker_system/pipelines/data_db/: nodes.py  pipeline.py
draft-tracker-system/src/draft_tracker_system/pipelines/data_file/: nodes.py  pipeline.py
draft-tracker-system/src/draft_tracker_system/pipelines/draft_scraping/: __init__.py  nodes.py  pipeline.py
draft-tracker-system/src/draft_tracker_system/routes/: user_routes.py
draft-tracker-system/src/draft_tracker_system/services/: user_service.py
draft-tracker-system/src/draft_tracker_system/tests/: conftest.py  test_user_service.py
draft-tracker-system/src/draft_tracker_system/utils/: config.py  hash.py  security.py
