[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "draft_tracker_system"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
]

[project.scripts]
draft-tracker-system = "draft_tracker_system.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "draft_tracker_system.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "draft_tracker_system"
project_name = "draft_tracker_system"
kedro_init_version = "1.1.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"
