[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "draft_tracker_system"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
    "pandas>=2.3.3",
    "selenium>=4.39.0",
    "kedro-datasets>=9.1.1",
    "kedro-viz>=12.2.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2025.12.0",
    "pysqlite3>=0.6.0",
    "sqlalchemy>=2.0.46",
    "pyspark>=4.1.1",
]

[project.scripts]
draft-tracker-system = "draft_tracker_system.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "draft_tracker_system.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "draft_tracker_system"
project_name = "draft_tracker_system"
kedro_init_version = "1.1.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "637e5e4c09264a45a21042470c5dbe8e"
